syntax = "proto3";
package machshev.masa.pb.thoughts;

import "google/protobuf/timestamp.proto";

message Thought {
    google.protobuf.Timestamp created = 1;
    string text = 2;
    bytes uuid = 3;
}

message ThoughtPad {
    repeated Thought thoughts = 1;
}

message AddRequest {
    string thought = 1;
}

message AddResponse {
    bytes uuid = 1;
}

message ListRequest {
}

message ListResponse {
    repeated Thought thoughts = 1;
}

service ThoughtService {
    rpc Add(AddRequest) returns (AddResponse) {}
    rpc List(ListRequest) returns (ListResponse) {}
}
